--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:id="@+id/image_1"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:src="@drawable/certificate"
+            android:src="@drawable/ink"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -39,7 +39,7 @@
             android:id="@+id/tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Saydullo Abdurashidov"
+            android:text=""
             android:layout_marginHorizontal="20dp"
             android:textSize="12sp"
             app:layout_constraintVertical_bias=".59"
